Applying boolean modifier does not set material of new surfaces properly. #62916

Closed
opened 2019-03-25 08:55:49 +01:00 by takaaki takeda · 5 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 00:55, hash: 07f6be87a9
Worked: (optional)

Short description of error
Attached .blend has a Cube with boolean modifier (difference with an invisible red icosphere).
Its newly generated faces are shown red, but when applying the modifier, its all faces becomes white.

Exact steps for others to reproduce the error
Attached .blend has a Cube with boolean modifier (difference with an invisible red icosphere).
The cube has two material slots (White and Red), and all faces are White.
The sphere is with Red material.
Its newly generated faces by boolean modifier is Red, but when applying modifier, all faces become white.
(In 2.79, The faces remain red with similar situation. see an attached file for 2.79)
BooleanWithMaterials280.blend
BooleanWithMaterials279.blend
When applied, all material becomes white in 2.80 beta
BoolMaterial.jpg

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 00:55, hash: `07f6be87a9` Worked: (optional) **Short description of error** Attached .blend has a Cube with boolean modifier (difference with an invisible red icosphere). Its newly generated faces are shown red, but when applying the modifier, its all faces becomes white. **Exact steps for others to reproduce the error** Attached .blend has a Cube with boolean modifier (difference with an invisible red icosphere). The cube has two material slots (White and Red), and all faces are White. The sphere is with Red material. Its newly generated faces by boolean modifier is Red, but when applying modifier, all faces become white. (In 2.79, The faces remain red with similar situation. see an attached file for 2.79) [BooleanWithMaterials280.blend](https://archive.blender.org/developer/F6879828/BooleanWithMaterials280.blend) [BooleanWithMaterials279.blend](https://archive.blender.org/developer/F6879829/BooleanWithMaterials279.blend) When applied, all material becomes white in 2.80 beta ![BoolMaterial.jpg](https://archive.blender.org/developer/F6879833/BoolMaterial.jpg)
Author

Added subscriber: @popqjp

Added subscriber: @popqjp
Sebastian Parborg self-assigned this 2019-03-25 14:17:31 +01:00

I've posted a fix: D4587

I've posted a fix: [D4587](https://archive.blender.org/developer/D4587)

This issue was referenced by 4370d00b0b

This issue was referenced by 4370d00b0b423f6467bb5d0d09de7e901d23fffe

This issue was referenced by 46eb5a0b8a

This issue was referenced by 46eb5a0b8a4f3a7826b5e5a1a11e114e09037dba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62916
No description provided.